# clawguard

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  README.zh-CN.md  install.sh
.github/workflows/: release.yml
advisories/: openclaw.json
data/: mcp_server_allowlist.txt  policy.default.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_canonicalize_args.rs  fuzz_git_config.rs  fuzz_git_head.rs  fuzz_iso_timestamp.rs  fuzz_ndjson_event.rs  fuzz_policy_toml.rs
openclaw-plugin/: index.js  openclaw.plugin.json  package.json
openclaw-plugin-runtime/: index.js  openclaw.plugin.json  package.json
src/: lib.rs  main.rs
src/audit/: ingest.rs  mod.rs
src/cli/: mod.rs
src/config/: mod.rs  presets.rs  schema.rs  store.rs
src/daemon/: mod.rs  recovery.rs  watch.rs
src/discovery/: mod.rs
src/notify/: mod.rs  platform.rs  sse.rs  webhook.rs
src/plugin/: mod.rs  openclaw.rs
src/runtime/: mod.rs
src/runtime/adapter/: common.rs  mod.rs  openclaw.rs
src/runtime/policy/: manifest.rs  mod.rs  rules.rs
src/scan/: baseline.rs  bootstrap.rs  cve.rs  file_type.rs  finding.rs  hooks.rs  mcp.rs  mod.rs  openclaw.rs  posture.rs  secrets.rs  severity.rs  skills.rs
src/state/: db.rs  model.rs
src/ui/: alerts.rs  findings.rs  mod.rs  status.rs
src/wizard/: mod.rs  state.rs
tests/: audit.rs  audit_cli.rs  bootstrap_scan.rs  cli_help.rs  cve_check.rs  discovery.rs  findings_ui.rs  hooks_scan.rs  mcp_scan.rs  notify.rs  notify_cli.rs  openclaw_audit.rs  plugin_cli.rs  policy_cli.rs  presets.rs  recovery.rs  runtime_broker_e2e.rs  runtime_bypass_regression.rs  scan_engine.rs  secrets_scan.rs  skill_provenance.rs  skills_scan.rs  sse_server.rs  state_db.rs  stats.rs  status_ui.rs  task12_cli.rs  v0_smoke.rs  watchers.rs  wizard_flow.rs
tests/fixtures/advisories/: openclaw.json
tests/fixtures/env/: safe.env  unsafe.env
tests/fixtures/mcp/: config.json
tests/fixtures/openclaw/: auth-profiles.json  insecure-exec-approvals.json  insecure-openclaw.json  package.json  tripwire-exec-approvals.json
tests/fixtures/skills/risky-install/: SKILL.md
tests/fixtures/skills/risky-network/: SKILL.md
tests/fixtures/skills/risky-shell/: SKILL.md
tests/fixtures/skills/safe-skill/: SKILL.md
