[package]
name = "clawguard"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
glob = "0.3"
json5 = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
semver = "1"
sha2 = "0.10"
toml = "0.8"

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3"
