[package]
name = "clawguard"
version = "1.0.0"
edition = "2021"
description = "Security scanner for OpenClaw and AI agent runtimes"
license = "MIT"
repository = "https://github.com/AgentSec-A2S/clawguard"
homepage = "https://github.com/AgentSec-A2S/clawguard"
readme = "README.md"
keywords = ["security", "openclaw", "ai-agent", "scanner"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
glob = "0.3"
json5 = "0.4"
notify = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
semver = "1"
sha2 = "0.10"
toml = "0.8"
ureq = { version = "2.10", features = ["json"] }

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3"
