[package]
name = "clawguard-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.clawguard]
path = ".."

[[bin]]
name = "fuzz_git_config"
path = "fuzz_targets/fuzz_git_config.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_git_head"
path = "fuzz_targets/fuzz_git_head.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_iso_timestamp"
path = "fuzz_targets/fuzz_iso_timestamp.rs"
test = false
doc = false
bench = false
